syntax = "proto2";
package bsn_msg_gate_server;

enum ECmdGate2Server { 
	CmdGate2Server_Min 					= 1000; // 

	CmdGate2Server_GetServerConfigReq 	= 1001; // 

	CmdGate2Server_Max					= 65535; // 
}


enum ECmdServe2Gate { 
	CmdServer2Gate_Min 					= 1000; // 

	CmdServer2Gate_GetServerConfigRes 	= 1001; // 

	CmdServer2Gate_Max					= 65535; // 
}
  
